--- a/configuration/binoc/binaryoutcast/php/CMakeLists.txt
+++ b/configuration/binoc/binaryoutcast/php/CMakeLists.txt
@@ -4,7 +4,7 @@ file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${mk_relpath})
 file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${mk_relpath}/session)
 
 # php-fpm pool config
-pyPreprocess(
+build_func_preprocess(
     ${mk_depth}/aura/templates/php/php-pool.conf.in
     php-pool.conf -Fsubstitution
     -DAURA_USER_CLASS="${varUserClass}"
@@ -13,7 +13,7 @@ pyPreprocess(
 )
 
 # php-fpm pool config
-pyPreprocess(
+build_func_preprocess(
     ${mk_depth}/aura/templates/php/php-pool.conf.in
     php56-pool.conf
     -Fsubstitution
@@ -24,7 +24,7 @@ pyPreprocess(
 )
 
 # php-fpm pool config
-pyPreprocess(
+build_func_preprocess(
     ${mk_depth}/aura/templates/php/php-pool.conf.in
     php70-pool.conf
     -Fsubstitution
