--- a/configuration/binoc/newtobinparadigm/vsftpd/users/CMakeLists.txt
+++ b/configuration/binoc/newtobinparadigm/vsftpd/users/CMakeLists.txt
@@ -2,7 +2,7 @@ build_macro_mkPaths()
 
 file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${mk_relpath})
 
-pyPreprocess(capture capture)
-pyPreprocess(files files)
-pyPreprocess(mattatobin mattatobin)
-pyPreprocess(private private)
+build_func_preprocess(capture capture)
+build_func_preprocess(files files)
+build_func_preprocess(mattatobin mattatobin)
+build_func_preprocess(private private)
