--- a/configuration/binoc/newtobinparadigm/vsftpd/CMakeLists.txt
+++ b/configuration/binoc/newtobinparadigm/vsftpd/CMakeLists.txt
@@ -2,8 +2,8 @@ build_macro_mkPaths()
 
 file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${mk_relpath})
 
-pyPreprocess(vsftpd.service aura-${varUserClass}-${varUserName}-vsftpd.service)
-pyPreprocess(vsftpd.conf vsftpd.conf)
-pyPreprocess(vsftpd.pam vsftpd.pam)
+build_func_preprocess(vsftpd.service aura-${varUserClass}-${varUserName}-vsftpd.service)
+build_func_preprocess(vsftpd.conf vsftpd.conf)
+build_func_preprocess(vsftpd.pam vsftpd.pam)
 
 add_subdirectory(users)
