SETUP_FINAL_TARGET

--- a/configuration/binoc/binaryoutcast/CMakeLists.txt
+++ b/configuration/binoc/binaryoutcast/CMakeLists.txt
@@ -1,6 +1,7 @@
 build_macro_mkPaths()
+SETUP_FINAL_TARGET()
 
-file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${mk_relpath})
+
 
 # Set information about this user
 set(varUserName "binaryoutcast")
