--- a/configuration/binoc/binocnetwork/nginx/CMakeLists.txt
+++ b/configuration/binoc/binocnetwork/nginx/CMakeLists.txt
@@ -1,10 +1,11 @@
 build_macro_mkPaths()
+SETUP_FINAL_TARGET()
 
-file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${mk_relpath})
+
 
 # Userscope Nginx systemd Service
 build_func_preprocess(
-    ${mk_depth}/aura/templates/nginx/nginx.service.in
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.service.in
     aura-${varUserClass}-${varUserName}-nginx.service
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
@@ -14,7 +15,7 @@ build_func_preprocess(
 
 # Userscope Nginx Server Instance
 build_func_preprocess(
-    ${mk_depth}/aura/templates/nginx/nginx.conf.in
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.conf.in
     nginx.conf
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
@@ -28,7 +29,7 @@ if(varTargetServerQuartz)
 # Proxy file for binocnetwork.com
     set(varDomain "binocnetwork.com")
     build_func_preprocess(
-        ${mk_depth}/aura/templates/nginx/standard.proxy.in
+        ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
         www.${varDomain}.proxy
         -Fsubstitution
         -DAURA_VERSION="${varTargetAuraVersion}"
@@ -45,7 +46,7 @@ if(varTargetServerQuartz)
     set(varRootDomain "binocnetwork.com")
     set(varDomain ${varRootDomain})
     build_func_preprocess(
-        ${mk_depth}/aura/templates/nginx/standard.vhost.in
+        ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
         www.${varDomain}.vhost
         -Fsubstitution
         -DAURA_VERSION="${varTargetAuraVersion}"
@@ -64,7 +65,7 @@ elseif(varTargetServerRegolith)
     set(varDomain "regolith.server.binocnetwork.com")
 endif()
 build_func_preprocess(
-    ${mk_depth}/aura/templates/nginx/standard.proxy.in
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
     ${varDomain}.proxy
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
@@ -84,7 +85,7 @@ endif()
 set(varRootDomain "binocnetwork.com")
 set(varDomain "${varSubdomain}.${varRootDomain}")
 build_func_preprocess(
-    ${mk_depth}/aura/templates/nginx/standard.vhost.in
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
     ${varDomain}.vhost
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
