--- a/configuration/binoc/newtobinparadigm/nginx/CMakeLists.txt
+++ b/configuration/binoc/newtobinparadigm/nginx/CMakeLists.txt
@@ -1,10 +1,11 @@
 build_macro_mkPaths()
+SETUP_FINAL_TARGET()
 
-file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${mk_relpath})
+
 
 # Userscope Nginx systemd Service
 build_func_preprocess(
-    ${mk_depth}/aura/templates/nginx/nginx.service.in
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.service.in
     aura-${varUserClass}-${varUserName}-nginx.service
     -Fsubstitution -DAURA_VERSION="${varTargetAuraVersion}"
     -DAURA_USER_CLASS="${varUserClass}"
@@ -13,7 +14,7 @@ build_func_preprocess(
 
 # Userscope Nginx Server Instance
 build_func_preprocess(
-    ${mk_depth}/aura/templates/nginx/nginx.conf.in
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.conf.in
     nginx.conf
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
@@ -26,7 +27,7 @@ build_func_preprocess(
 # Proxy file for mattatobin.com
 set(varDomain "mattatobin.com")
 build_func_preprocess(
-    ${mk_depth}/aura/templates/nginx/standard.proxy.in
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
     www.${varDomain}.proxy
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
@@ -43,7 +44,7 @@ set(varSubdomain "www")
 set(varRootDomain "mattatobin.com")
 set(varDomain ${varRootDomain})
 build_func_preprocess(
-    ${mk_depth}/aura/templates/nginx/standard.vhost.in
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
     www.${varDomain}.vhost
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
@@ -60,7 +61,7 @@ build_func_preprocess(
 # Proxy file for personal.mattatobin.com
 set(varDomain "personal.mattatobin.com")
 build_func_preprocess(
-    ${mk_depth}/aura/templates/nginx/standard.proxy.in
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
     ${varDomain}.proxy
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
@@ -76,7 +77,7 @@ set(varSubdomain "personal")
 set(varRootDomain "mattatobin.com")
 set(varDomain "${varSubdomain}.${varRootDomain}")
 build_func_preprocess(
-    ${mk_depth}/aura/templates/nginx/standard.vhost.in
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
     ${varDomain}.vhost
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
