--- a/configuration/mcp/palemoon/nginx/CMakeLists.txt
+++ b/configuration/mcp/palemoon/nginx/CMakeLists.txt
@@ -1,10 +1,11 @@
 build_macro_mkPaths()
+SETUP_FINAL_TARGET()
 
-file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${mk_relpath})
+
 
 # Userscope Nginx systemd Service
 build_func_preprocess(
-    ${mk_depth}/aura/templates/nginx/nginx.service.in
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.service.in
     aura-${varUserClass}-${varUserName}-nginx.service
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
@@ -14,7 +15,7 @@ build_func_preprocess(
 
 # Userscope Nginx Server Instance
 build_func_preprocess(
-${mk_depth}/aura/templates/nginx/nginx.conf.in
+${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.conf.in
     nginx.conf
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
@@ -27,7 +28,7 @@ ${mk_depth}/aura/templates/nginx/nginx.conf.in
 # Proxy file for addons.palemoon.org
 set(varDomain "addons.palemoon.org")
 build_func_preprocess(
-    ${mk_depth}/aura/templates/nginx/standard.proxy.in
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
     ${varDomain}.proxy
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
@@ -62,7 +63,7 @@ build_func_preprocess(
 # Proxy file for dev.addons.palemoon.org
 set(varDomain "dev.addons.palemoon.org")
 build_func_preprocess(
-    ${mk_depth}/aura/templates/nginx/standard.proxy.in
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
     ${varDomain}.proxy
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
@@ -80,7 +81,7 @@ set(varSubdomain "dev.addons")
 set(varRootDomain "palemoon.org")
 set(varDomain "${varSubdomain}.${varRootDomain}")
 build_func_preprocess(
-    ${mk_depth}/aura/templates/nginx/standard.vhost.in
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
     ${varDomain}.vhost
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
@@ -97,7 +98,7 @@ build_func_preprocess(
 # Proxy file for developer.palemoon.org
 set(varDomain "developer.palemoon.org")
 build_func_preprocess(
-    ${mk_depth}/aura/templates/nginx/standard.proxy.in
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
     ${varDomain}.proxy
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
@@ -115,7 +116,7 @@ set(varSubdomain "developer")
 set(varRootDomain "palemoon.org")
 set(varDomain "${varSubdomain}.${varRootDomain}")
 build_func_preprocess(
-    ${mk_depth}/aura/templates/nginx/standard.vhost.in
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
     ${varDomain}.vhost
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
