--- a/configuration/system/CMakeLists.txt
+++ b/configuration/system/CMakeLists.txt
@@ -1,6 +1,7 @@
 build_macro_mkPaths()
+SETUP_FINAL_TARGET()
 
-file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${mk_relpath})
+
 
 # Set the user class
 set(varUserClass "system")
