--- a/configuration/unaffiliated/dovedesign/nginx/CMakeLists.txt
+++ b/configuration/unaffiliated/dovedesign/nginx/CMakeLists.txt
@@ -1,10 +1,11 @@
 build_macro_mkPaths()
+SETUP_FINAL_TARGET()
 
-file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${mk_relpath})
+
 
 # Userscope Nginx systemd Service
 build_func_preprocess(
-    ${mk_depth}/aura/templates/nginx/nginx.service.in
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.service.in
     aura-${varUserClass}-${varUserName}-nginx.service
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
@@ -14,7 +15,7 @@ build_func_preprocess(
 
 # Userscope Nginx Server Instance
 build_func_preprocess(
-    ${mk_depth}/aura/templates/nginx/nginx.conf.in
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.conf.in
     nginx.conf
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
@@ -27,7 +28,7 @@ build_func_preprocess(
 # Proxy file for susantobinart.com
 set(varDomain "susantobinart.com")
 build_func_preprocess(
-    ${mk_depth}/aura/templates/nginx/standard.proxy.in
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
     www.${varDomain}.proxy
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
@@ -44,7 +45,7 @@ set(varSubdomain "www")
 set(varRootDomain "susantobinart.com")
 set(varDomain ${varRootDomain})
 build_func_preprocess(
-    ${mk_depth}/aura/templates/nginx/standard.vhost.in
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
     www.${varDomain}.vhost
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
