--- a/configuration/binoc/royalgeekworld/nginx/CMakeLists.txt
+++ b/configuration/binoc/royalgeekworld/nginx/CMakeLists.txt
@@ -6,7 +6,7 @@ SETUP_FINAL_TARGET()
 # Userscope Nginx systemd Service
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.service.in
-    aura-${varUserClass}-${varUserName}-nginx.service
+    ${FINAL_TARGET}/aura-${varUserClass}-${varUserName}-nginx.service
     -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
     -DAURA_USER_CLASS="${varUserClass}"
