--- a/configuration/binoc/newtobinparadigm/vsftpd/users/CMakeLists.txt
+++ b/configuration/binoc/newtobinparadigm/vsftpd/users/CMakeLists.txt
@@ -3,7 +3,7 @@ SETUP_FINAL_TARGET()
 
 
 
-build_func_preprocess(capture capture)
-build_func_preprocess(files files)
-build_func_preprocess(mattatobin mattatobin)
-build_func_preprocess(private private)
+build_func_preprocess(capture ${FINAL_TARGET}/capture)
+build_func_preprocess(files ${FINAL_TARGET}/files)
+build_func_preprocess(mattatobin ${FINAL_TARGET}/mattatobin)
+build_func_preprocess(private ${FINAL_TARGET}/private)
