--- a/configuration/mcp/palemoon/vsftpd/CMakeLists.txt
+++ b/configuration/mcp/palemoon/vsftpd/CMakeLists.txt
@@ -3,6 +3,6 @@ SETUP_FINAL_TARGET()
 
 
 
-build_func_preprocess(vsftpd.service aura-${varUserClass}-${varUserName}-vsftpd.service)
-build_func_preprocess(vsftpd.conf vsftpd.conf)
-build_func_preprocess(vsftpd.pam vsftpd.pam)
+build_func_preprocess(vsftpd.service ${FINAL_TARGET}/aura-${varUserClass}-${varUserName}-vsftpd.service)
+build_func_preprocess(vsftpd.conf ${FINAL_TARGET}/vsftpd.conf)
+build_func_preprocess(vsftpd.pam ${FINAL_TARGET}/vsftpd.pam)
