--- a/configuration/system/bind/CMakeLists.txt
+++ b/configuration/system/bind/CMakeLists.txt
@@ -9,30 +9,30 @@ set(varBindNS2 "ns2.binocnetwork.com")
 set(varBindConfPrefix "aura/configuration/system/bind")
 
 # BIND Service
-build_func_preprocess(bind.service.in aura-${varUserClass}-${varUserName}-bind.service -Fsubstitution -DAURA_USER_CLASS="${varUserClass}" -DAURA_USER_NAME="${varUserName}" -DBIND_CONF_PREFIX="${varBindConfPrefix}")
+build_func_preprocess(bind.service.in ${FINAL_TARGET}/aura-${varUserClass}-${varUserName}-bind.service  -DAURA_USER_CLASS="${varUserClass}" -DAURA_USER_NAME="${varUserName}" -DBIND_CONF_PREFIX="${varBindConfPrefix}")
 
 # Preprocess Main BIND Files
-build_func_preprocess(named.conf.in named.conf -Fsubstitution -DBIND_CONF_PREFIX="${varBindConfPrefix}")
-build_func_preprocess(named.inc.in named.inc -Fsubstitution -DBIND_CONF_PREFIX="${varBindConfPrefix}")
+build_func_preprocess(named.conf.in ${FINAL_TARGET}/named.conf  -DBIND_CONF_PREFIX="${varBindConfPrefix}")
+build_func_preprocess(named.inc.in ${FINAL_TARGET}/named.inc  -DBIND_CONF_PREFIX="${varBindConfPrefix}")
 
 # Preprocess zones for class: binoc
 set(varBindDomain "binocnetwork.com")
-build_func_preprocess(${varBindDomain}.zone.in ${varBindDomain}.zone -Fsubstitution -DAURA_IPV4="${varSystemIPv4}" -DAURA_IPV6="${varSystemIPv6}" -DBIND_NS1="${varBindNS1}" -DBIND_NS2="${varBindNS2}" -DBIND_DOMAIN="${varBindDomain}")
+build_func_preprocess(${varBindDomain}.zone.in ${FINAL_TARGET}/${varBindDomain}.zone  -DAURA_IPV4="${varSystemIPv4}" -DAURA_IPV6="${varSystemIPv6}" -DBIND_NS1="${varBindNS1}" -DBIND_NS2="${varBindNS2}" -DBIND_DOMAIN="${varBindDomain}")
 
 set(varBindDomain "binocglobal.com")
-build_func_preprocess(standard.zone.in ${varBindDomain}.zone -Fsubstitution -DAURA_IPV4="${varSystemIPv4}" -DAURA_IPV6="${varSystemIPv6}" -DBIND_NS1="${varBindNS1}" -DBIND_NS2="${varBindNS2}" -DBIND_DOMAIN="${varBindDomain}")
+build_func_preprocess(standard.zone.in ${FINAL_TARGET}/${varBindDomain}.zone  -DAURA_IPV4="${varSystemIPv4}" -DAURA_IPV6="${varSystemIPv6}" -DBIND_NS1="${varBindNS1}" -DBIND_NS2="${varBindNS2}" -DBIND_DOMAIN="${varBindDomain}")
 
 set(varBindDomain "binaryoutcast.com")
-build_func_preprocess(${varBindDomain}.zone.in ${varBindDomain}.zone -Fsubstitution -DAURA_IPV4="${varSystemIPv4}" -DAURA_IPV6="${varSystemIPv6}" -DBIND_NS1="${varBindNS1}" -DBIND_NS2="${varBindNS2}" -DBIND_DOMAIN="${varBindDomain}")
+build_func_preprocess(${varBindDomain}.zone.in ${FINAL_TARGET}/${varBindDomain}.zone  -DAURA_IPV4="${varSystemIPv4}" -DAURA_IPV6="${varSystemIPv6}" -DBIND_NS1="${varBindNS1}" -DBIND_NS2="${varBindNS2}" -DBIND_DOMAIN="${varBindDomain}")
 
 set(varBindDomain "mattatobin.com")
-build_func_preprocess(${varBindDomain}.zone.in ${varBindDomain}.zone -Fsubstitution -DAURA_IPV4="${varSystemIPv4}" -DAURA_IPV6="${varSystemIPv6}" -DBIND_NS1="${varBindNS1}" -DBIND_NS2="${varBindNS2}" -DBIND_DOMAIN="${varBindDomain}")
+build_func_preprocess(${varBindDomain}.zone.in ${FINAL_TARGET}/${varBindDomain}.zone  -DAURA_IPV4="${varSystemIPv4}" -DAURA_IPV6="${varSystemIPv6}" -DBIND_NS1="${varBindNS1}" -DBIND_NS2="${varBindNS2}" -DBIND_DOMAIN="${varBindDomain}")
 
 set(varBindDomain "royalgeekworld.com")
-build_func_preprocess(${varBindDomain}.zone.in ${varBindDomain}.zone -Fsubstitution -DAURA_IPV4="${varSystemIPv4}" -DAURA_IPV6="${varSystemIPv6}" -DBIND_NS1="${varBindNS1}" -DBIND_NS2="${varBindNS2}" -DBIND_DOMAIN="${varBindDomain}")
+build_func_preprocess(${varBindDomain}.zone.in ${FINAL_TARGET}/${varBindDomain}.zone  -DAURA_IPV4="${varSystemIPv4}" -DAURA_IPV6="${varSystemIPv6}" -DBIND_NS1="${varBindNS1}" -DBIND_NS2="${varBindNS2}" -DBIND_DOMAIN="${varBindDomain}")
 
 set(varBindDomain "royalgeekworld.net")
-build_func_preprocess(${varBindDomain}.zone.in ${varBindDomain}.zone -Fsubstitution -DAURA_IPV4="${varSystemIPv4}" -DAURA_IPV6="${varSystemIPv6}" -DBIND_NS1="${varBindNS1}" -DBIND_NS2="${varBindNS2}" -DBIND_DOMAIN="${varBindDomain}")
+build_func_preprocess(${varBindDomain}.zone.in ${FINAL_TARGET}/${varBindDomain}.zone  -DAURA_IPV4="${varSystemIPv4}" -DAURA_IPV6="${varSystemIPv6}" -DBIND_NS1="${varBindNS1}" -DBIND_NS2="${varBindNS2}" -DBIND_DOMAIN="${varBindDomain}")
 
 # Preprocess zones for class: staff
 
@@ -40,9 +40,9 @@ build_func_preprocess(${varBindDomain}.zone.in ${varBindDomain}.zone -Fsubstitut
 ### Add zones for kokomosaferefuge and dovedesign
 
 set(varBindDomain "susantobinart.com")
-build_func_preprocess(standard.zone.in ${varBindDomain}.zone -Fsubstitution -DAURA_IPV4="${varSystemIPv4}" -DAURA_IPV6="${varSystemIPv6}" -DBIND_NS1="${varBindNS1}" -DBIND_NS2="${varBindNS2}" -DBIND_DOMAIN="${varBindDomain}")
+build_func_preprocess(standard.zone.in ${FINAL_TARGET}/${varBindDomain}.zone  -DAURA_IPV4="${varSystemIPv4}" -DAURA_IPV6="${varSystemIPv6}" -DBIND_NS1="${varBindNS1}" -DBIND_NS2="${varBindNS2}" -DBIND_DOMAIN="${varBindDomain}")
 
 set(varBindDomain "kokomosaferefuge.org")
-build_func_preprocess(standard.zone.in ${varBindDomain}.zone -Fsubstitution -DAURA_IPV4="${varSystemIPv4}" -DAURA_IPV6="${varSystemIPv6}" -DBIND_NS1="${varBindNS1}" -DBIND_NS2="${varBindNS2}" -DBIND_DOMAIN="${varBindDomain}")
+build_func_preprocess(standard.zone.in ${FINAL_TARGET}/${varBindDomain}.zone  -DAURA_IPV4="${varSystemIPv4}" -DAURA_IPV6="${varSystemIPv6}" -DBIND_NS1="${varBindNS1}" -DBIND_NS2="${varBindNS2}" -DBIND_DOMAIN="${varBindDomain}")
 
 # Preprocess zones for domains not on Quartz
