--- a/configuration/binoc/binocnetwork/nginx/CMakeLists.txt
+++ b/configuration/binoc/binocnetwork/nginx/CMakeLists.txt
@@ -7,7 +7,6 @@ SETUP_FINAL_TARGET()
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.service.in
     ${FINAL_TARGET}/aura-${varUserClass}-${varUserName}-nginx.service
-    -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
     -DAURA_USER_CLASS="${varUserClass}"
     -DAURA_USER_NAME="${varUserName}"
@@ -16,8 +15,7 @@ build_func_preprocess(
 # Userscope Nginx Server Instance
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.conf.in
-    nginx.conf
-    -Fsubstitution
+    ${FINAL_TARGET}/nginx.conf
     -DAURA_VERSION="${varTargetAuraVersion}"
     -DAURA_IPV4="${varSystemIPv4}"
     -DAURA_IPV6="${varSystemIPv6}"
@@ -30,8 +28,7 @@ if(varTargetServerQuartz)
     set(varDomain "binocnetwork.com")
     build_func_preprocess(
         ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
-        www.${varDomain}.proxy
-        -Fsubstitution
+        ${FINAL_TARGET}/www.${varDomain}.proxy
         -DAURA_VERSION="${varTargetAuraVersion}"
         -DAURA_IPV4="${varSystemIPv4}"
         -DAURA_IPV6="${varSystemIPv6}"
@@ -47,9 +44,8 @@ if(varTargetServerQuartz)
     set(varDomain ${varRootDomain})
     build_func_preprocess(
         ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
-        www.${varDomain}.vhost
-        -Fsubstitution
-        -DAURA_VERSION="${varTargetAuraVersion}"
+        ${FINAL_TARGET}/www.${varDomain}.vhost
+            -DAURA_VERSION="${varTargetAuraVersion}"
         -DAURA_USER_CLASS="${varUserClass}"
         -DAURA_USER_NAME="${varUserName}"
         -DNGX_DOMAIN="${varDomain}"
@@ -66,8 +62,7 @@ elseif(varTargetServerRegolith)
 endif()
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
-    ${varDomain}.proxy
-    -Fsubstitution
+    ${FINAL_TARGET}/${varDomain}.proxy
     -DAURA_VERSION="${varTargetAuraVersion}"
     -DAURA_IPV4="${varSystemIPv4}"
     -DAURA_IPV6="${varSystemIPv6}"
@@ -86,8 +81,7 @@ set(varRootDomain "binocnetwork.com")
 set(varDomain "${varSubdomain}.${varRootDomain}")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
-    ${varDomain}.vhost
-    -Fsubstitution
+    ${FINAL_TARGET}/${varDomain}.vhost
     -DAURA_VERSION="${varTargetAuraVersion}"
     -DAURA_USER_CLASS="${varUserClass}"
     -DAURA_USER_NAME="${varUserName}"
