--- a/configuration/binoc/newtobinparadigm/nginx/CMakeLists.txt
+++ b/configuration/binoc/newtobinparadigm/nginx/CMakeLists.txt
@@ -7,7 +7,7 @@ SETUP_FINAL_TARGET()
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.service.in
     ${FINAL_TARGET}/aura-${varUserClass}-${varUserName}-nginx.service
-    -Fsubstitution -DAURA_VERSION="${varTargetAuraVersion}"
+     -DAURA_VERSION="${varTargetAuraVersion}"
     -DAURA_USER_CLASS="${varUserClass}"
     -DAURA_USER_NAME="${varUserName}"
 )
@@ -15,8 +15,7 @@ build_func_preprocess(
 # Userscope Nginx Server Instance
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.conf.in
-    nginx.conf
-    -Fsubstitution
+    ${FINAL_TARGET}/nginx.conf
     -DAURA_VERSION="${varTargetAuraVersion}"
     -DAURA_IPV4="${varSystemIPv4}"
     -DAURA_IPV6="${varSystemIPv6}"
@@ -28,8 +27,7 @@ build_func_preprocess(
 set(varDomain "mattatobin.com")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
-    www.${varDomain}.proxy
-    -Fsubstitution
+    ${FINAL_TARGET}/www.${varDomain}.proxy
     -DAURA_VERSION="${varTargetAuraVersion}"
     -DAURA_IPV4="${varSystemIPv4}"
     -DAURA_IPV6="${varSystemIPv6}"
@@ -45,8 +43,7 @@ set(varRootDomain "mattatobin.com")
 set(varDomain ${varRootDomain})
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
-    www.${varDomain}.vhost
-    -Fsubstitution
+    ${FINAL_TARGET}/www.${varDomain}.vhost
     -DAURA_VERSION="${varTargetAuraVersion}"
     -DAURA_USER_CLASS="${varUserClass}"
     -DAURA_USER_NAME="${varUserName}"
@@ -62,8 +59,7 @@ build_func_preprocess(
 set(varDomain "personal.mattatobin.com")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
-    ${varDomain}.proxy
-    -Fsubstitution
+    ${FINAL_TARGET}/${varDomain}.proxy
     -DAURA_VERSION="${varTargetAuraVersion}"
     -DAURA_IPV4="${varSystemIPv4}"
     -DAURA_IPV6="${varSystemIPv6}"
@@ -78,8 +74,7 @@ set(varRootDomain "mattatobin.com")
 set(varDomain "${varSubdomain}.${varRootDomain}")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
-    ${varDomain}.vhost
-    -Fsubstitution
+    ${FINAL_TARGET}/${varDomain}.vhost
     -DAURA_VERSION="${varTargetAuraVersion}"
     -DAURA_USER_CLASS="${varUserClass}"
     -DAURA_USER_NAME="${varUserName}"
