--- a/configuration/mcp/palemoon/nginx/CMakeLists.txt
+++ b/configuration/mcp/palemoon/nginx/CMakeLists.txt
@@ -7,7 +7,6 @@ SETUP_FINAL_TARGET()
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.service.in
     ${FINAL_TARGET}/aura-${varUserClass}-${varUserName}-nginx.service
-    -Fsubstitution
     -DAURA_VERSION="${varTargetAuraVersion}"
     -DAURA_USER_CLASS="${varUserClass}"
     -DAURA_USER_NAME="${varUserName}"
@@ -15,9 +14,8 @@ build_func_preprocess(
 
 # Userscope Nginx Server Instance
 build_func_preprocess(
-${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.conf.in
-    nginx.conf
-    -Fsubstitution
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.conf.in
+    ${FINAL_TARGET}/nginx.conf
     -DAURA_VERSION="${varTargetAuraVersion}"
     -DAURA_IPV4="${varSystemIPv4}"
     -DAURA_IPV6="${varSystemIPv6}"
@@ -29,8 +27,7 @@ ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.conf.in
 set(varDomain "addons.palemoon.org")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
-    ${varDomain}.proxy
-    -Fsubstitution
+    ${FINAL_TARGET}/${varDomain}.proxy
     -DAURA_VERSION="${varTargetAuraVersion}"
     -DAURA_IPV4="${varSystemIPv4}" 
     -DAURA_IPV6="${varSystemIPv6}"
@@ -48,8 +45,7 @@ set(varRootDomain "palemoon.org")
 set(varDomain "${varSubdomain}.${varRootDomain}")
 build_func_preprocess(
     ${varDomain}.vhost.in
-    ${varDomain}.vhost
-    -Fsubstitution
+    ${FINAL_TARGET}/${varDomain}.vhost
     -DAURA_VERSION="${varTargetAuraVersion}"
     -DAURA_USER_CLASS="${varUserClass}"
     -DAURA_USER_NAME="${varUserName}"
@@ -64,8 +60,7 @@ build_func_preprocess(
 set(varDomain "dev.addons.palemoon.org")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
-    ${varDomain}.proxy
-    -Fsubstitution
+    ${FINAL_TARGET}/${varDomain}.proxy
     -DAURA_VERSION="${varTargetAuraVersion}"
     -DAURA_IPV4="${varSystemIPv4}"
     -DAURA_IPV6="${varSystemIPv6}"
@@ -82,8 +77,7 @@ set(varRootDomain "palemoon.org")
 set(varDomain "${varSubdomain}.${varRootDomain}")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
-    ${varDomain}.vhost
-    -Fsubstitution
+    ${FINAL_TARGET}/${varDomain}.vhost
     -DAURA_VERSION="${varTargetAuraVersion}"
     -DAURA_USER_CLASS="${varUserClass}"
     -DAURA_USER_NAME="${varUserName}"
@@ -99,8 +93,7 @@ build_func_preprocess(
 set(varDomain "developer.palemoon.org")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
-    ${varDomain}.proxy
-    -Fsubstitution
+    ${FINAL_TARGET}/${varDomain}.proxy
     -DAURA_VERSION="${varTargetAuraVersion}"
     -DAURA_IPV4="${varSystemIPv4}"
     -DAURA_IPV6="${varSystemIPv6}"
@@ -117,8 +110,7 @@ set(varRootDomain "palemoon.org")
 set(varDomain "${varSubdomain}.${varRootDomain}")
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
-    ${varDomain}.vhost
-    -Fsubstitution
+    ${FINAL_TARGET}/${varDomain}.vhost
     -DAURA_VERSION="${varTargetAuraVersion}"
     -DAURA_USER_CLASS="${varUserClass}"
     -DAURA_USER_NAME="${varUserName}"
