--- a/configuration/binoc/newtobinparadigm/vsftpd/CMakeLists.txt
+++ b/configuration/binoc/newtobinparadigm/vsftpd/CMakeLists.txt
@@ -1,6 +1,6 @@
 build_macro_mkPaths()
 SETUP_FINAL_TARGET()
-
+AURA_DEFINES()
 
 
 build_func_preprocess(vsftpd.service ${FINAL_TARGET}/aura-${varUserClass}-${varUserName}-vsftpd.service)
